[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Arwichok <me@arwi.dev>"]

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "3.0.0b6"
uvicorn = "^0.20.0"
fastapi = "^0.89.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
